# FHE_Mini_Project

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
examples/: interactive_demo.rs
fuzz/: Cargo.toml  README.md  run_fuzz_tests.sh
fuzz/fuzz_targets/: comprehensive_fuzz.rs  simple_fuzz.rs
proptest-regressions/: encryption_proptests.txt
src/: computations.rs  data_generator.rs  encryption.rs  lib.rs  main.rs  visualization.rs
src/property_tests/: encryption_proptests.rs  mod.rs
