[package]
name = "fhe_mini_project"
version = "0.1.0"
edition = "2021"
authors = ["Srivatsav Erramilli <srivatsaverramilli@gmail.com>"]
description = "FHE mini project for secure computation on encrypted biosample data"
license = "MIT"
repository = "https://github.com/Cass402/FHE_Mini_Project"
keywords = ["fhe", "encryption", "biosample", "homomorphic"]
categories = ["cryptography"]

[dependencies]
# FHE library- TFHE Rust
tfhe = { version = "1.2.0", features = ["boolean", "integer", "shortint"]}

# Data libraries
csv = "1.3"
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
chrono = "0.4.31"

# Data visualization libraries
plotters = "0.3.5"
polars = "0.35.4"

# Utility libraries
clap = { version = "4.4.6", features = ["derive"]}
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
thiserror = "1.0.49"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5.1"
fhe_mini_project = { path = "."}