[package]
name = "fhe_mini_project-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
tempfile = "3.8"
serde_json = "1.0"

[dependencies.fhe_mini_project]
path = ".."

# Simple fuzz test that can be run with cargo test
[[bin]]
name = "simple_fuzz"
path = "fuzz_targets/simple_fuzz.rs"
test = false
doc = false
bench = false

# Comprehensive fuzz test with detailed error reporting
[[bin]]
name = "comprehensive_fuzz"
path = "fuzz_targets/comprehensive_fuzz.rs"
test = false
doc = false
bench = false
